--- a/Resources/Prototypes/_NF/Shipyard/Sr/broom.yml
+++ b/Resources/Prototypes/_NF/Shipyard/Sr/broom.yml
@@ -12,7 +12,7 @@
   id: Broom
   name: LVHI Broom
   description: A cramped yet reliable shuttle for providing janitorial services.
-  price: 12800 # ~12180$ on mapinit + 5% markup
+  price: 13500 # ~12180$ on mapinit + 5% markup + some extra
   category: Micro
   group: Sr
   access: Janitor
