--- a/Resources/Prototypes/_NF/Shipyard/kilderkin.yml
+++ b/Resources/Prototypes/_NF/Shipyard/kilderkin.yml
@@ -12,7 +12,7 @@
   id: Kilderkin
   name: LVHI Kilderkin
   description: "Spaceworthy bar/microbrewery with everything one needs to facilitate poor life choices: lots of booze, smokes, and lack of food. Manufactured by Langstad-Voigt Heavy Industries."
-  price: 48900 # ~46564$ on mapinit + 5% markup
+  price: 49500 # ~46564$ on mapinit + 5% markup + some extra
   category: Medium
   group: Shipyard
   shuttlePath: /Maps/_NF/Shuttles/kilderkin.yml
