First set of new blueprints

--- a/Resources/Prototypes/Research/civilianservices.yml
+++ b/Resources/Prototypes/Research/civilianservices.yml
@@ -212,6 +212,8 @@
   recipeUnlocks:
   - WeaponSprayNozzle
   - ClothingBackpackWaterTank
+  - NFBlueprintWeaponSprayNozzle #Frontier
+  - NFBlueprintClothingBackpackWaterTank #Frontier 
 
 # Tier 3
 
@@ -238,6 +240,7 @@
   cost: 15000 # Frontier - 10000<15000
   recipeUnlocks:
   - ClothingShoesBootsSpeed
+  - NFBlueprintClothingShoesBootsSpeed #Frontier
 
 - type: technology
   id: BluespaceChemistry
