--- a/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_armory.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Tools/blueprints/blueprints_armory.yml
@@ -38,3 +38,22 @@
   - type: Blueprint
     providedRecipes:
     - ClothingOuterHardsuitScaf
+
+- type: entity
+  parent: NFBaseBlueprintArmory
+  id: NFBlueprinthandcuffs
+  name: handcuffs blueprint
+  description: A blueprint with a schematic of handcuffs. It can be inserted into an autolathe or a techfab.
+  components:
+  - type: Blueprint
+    providedRecipes:
+    - handcuffs
+- type: entity
+  parent: NFBaseBlueprintArmory
+  id: NFBlueprintWeaponShotgunKammererNF
+  name: kammerer blueprint
+  description: A blueprint with a schematic of a Kammerer. It can be inserted into an autolathe or a techfab.
+  components:
+  - type: Blueprint
+    providedRecipes:
+    - WeaponShotgunKammererNF
