--- a/Resources/Prototypes/_NF/Recipes/Lathes/blueprints.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/blueprints.yml
@@ -70,7 +70,17 @@
   id: NFBlueprintConstructionBagOfHolding
   result: NFBlueprintConstructionBagOfHolding
 
-## Medical
+- type: latheRecipe
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintShipyardRCD
+  result: NFBlueprintShipyardRCD
+
+- type: latheRecipe
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintPowerCellHigh
+  result: NFBlueprintPowerCellHigh
+
+  ## Medical
 
 - type: latheRecipe
   parent: NFBaseBlueprintLatheRecipe
@@ -153,12 +163,39 @@
   id: NFBlueprintPlantBagOfHolding
   result: NFBlueprintPlantBagOfHolding
 
+## Civilian
+
+- type: latheRecipe
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintClothingShoesBootsSpeed
+  result: NFBlueprintClothingShoesBootsSpeed
+
+- type: latheRecipe
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintWeaponSprayNozzle
+  result: NFBlueprintWeaponSprayNozzle
+
+- type: latheRecipe
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintClothingBackpackWaterTank 
+  result: NFBlueprintClothingBackpackWaterTank
+
 ## Armory
 
 - type: latheRecipe
   parent: NFBaseBlueprintLatheRecipe
   id: NFBlueprintWeaponAntiqueLaser
   result: NFBlueprintWeaponAntiqueLaser
+
+- type: latheRecipe
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintWeaponShotgunKammererNF
+  result: NFBlueprintWeaponShotgunKammererNF
+
+- type: latheRecipe
+  parent: NFBaseBlueprintLatheRecipe
+  id: NFBlueprintHandcuffs
+  result: NFBlueprintHandcuffs
 
 - type: latheRecipe
   parent: NFBaseBlueprintLatheRecipe
