Trade Mall (Trade Outpost Alternate) (#2365)
* trade mall

* Trade Mall tweaks (#2373)

* trade mall 2: the wrath of spess

* fix my own decal mistakes

* poi name to trade mall

* Update trademall.yml

* cameras and kitchen dock

* Update trademall.yml

* dirt and final touches

* Numbered docks

* Update trade mall prototype defn to use new fields

* Dusty's Trade Mall suggestions

---------

Co-authored-by: PECK <74548962+PeccNeck@users.noreply.github.com>
Co-authored-by: Dvir <39403717+dvir001@users.noreply.github.com>
Co-authored-by: Whatstone <whatston3@gmail.com>

--- a/Resources/Prototypes/_NF/PointsOfInterest/trademall.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/trademall.yml
@@ -1,6 +1,6 @@
 # Author Info
-# GitHub: MagnusCrowe
-# Discord: MagnusCrowe
+# GitHub: Cheackraze, PeccNeck
+# Discord: Checkraze, mariusdemeier, trucy_deuxy
 
 # Maintainer Info
 # GitHub: ???
@@ -9,12 +9,12 @@
 # Notes:
 # Basic Trade Outpost buying point for economy and great wealth
 - type: pointOfInterest
-  id: Trade
-  name: Trade Outpost
+  id: TradeMall
+  name: Trade Mall
   minimumDistance: 1500
   maximumDistance: 2500
   spawnGroup: MarketStation
-  gridPath: /Maps/_NF/POI/trade.yml
+  gridPath: /Maps/_NF/POI/trademall.yml
   addComponents:
   - type: IFF
     color: "#37C837"
@@ -27,15 +27,15 @@
     preventArtifactTriggers: true
 
 - type: gameMap
-  id: Trade
-  mapName: 'Trade Outpost'
-  mapPath: /Maps/_NF/POI/trade.yml
+  id: TradeMall
+  mapName: 'Trade Mall'
+  mapPath: /Maps/_NF/POI/trademall.yml
   minPlayers: 0
   stations:
-    Trade:
+    TradeMall:
       stationProto: MarketFrontierOutpost
       components:
         - type: StationNameSetup
-          mapNameTemplate: 'Trade Outpost'
+          mapNameTemplate: 'Trade Mall'
         - type: StationDeadDrop
-          maxDeadDrops: 3 # Many here, it's huge.
+          maxDeadDrops: 2 # A few, its not as big as the original trade outpost
