--- a/Resources/Prototypes/_NF/Roles/Jobs/Medical/mom.yml
+++ b/Resources/Prototypes/_NF/Roles/Jobs/Medical/mom.yml
@@ -31,10 +31,9 @@
 - type: startingGear
   id: MomGear
   equipment:
-    pocket1: WeaponDisabler    
+    pocket1: 
   storage:
-    back:
-    - Flash
+    back:    
     - RubberStampMom 
     
     
