Localize trade mall docks

--- a/Resources/Maps/_NF/POI/trademall.yml
+++ b/Resources/Maps/_NF/POI/trademall.yml
@@ -5982,7 +5982,7 @@ entities:
       pos: 17.5,3.5
       parent: 1
     - type: Docking
-      name: Bus Dock
+      name: dock-label-bus
   - uid: 2468
     components:
     - type: Transform
@@ -5990,21 +5990,21 @@ entities:
       pos: 18.5,3.5
       parent: 1
     - type: Docking
-      name: Bus Dock
+      name: dock-label-bus
   - uid: 2469
     components:
     - type: Transform
       pos: 17.5,11.5
       parent: 1
     - type: Docking
-      name: Bus Dock
+      name: dock-label-bus
   - uid: 2470
     components:
     - type: Transform
       pos: 18.5,11.5
       parent: 1
     - type: Docking
-      name: Bus Dock
+      name: dock-label-bus
 - proto: AirlockFreezer
   entities:
   - uid: 5402
@@ -6294,14 +6294,14 @@ entities:
       pos: -6.5,20.5
       parent: 1
     - type: Docking
-      name: D6
+      name: dock-label-trade-six
   - uid: 235
     components:
     - type: Transform
       pos: -32.5,-3.5
       parent: 1
     - type: Docking
-      name: D5A
+      name: dock-label-trade-five-a
   - uid: 381
     components:
     - type: Transform
@@ -6309,7 +6309,7 @@ entities:
       pos: -3.5,-41.5
       parent: 1
     - type: Docking
-      name: D4C
+      name: dock-label-trade-four-c
   - uid: 796
     components:
     - type: Transform
@@ -6317,14 +6317,14 @@ entities:
       pos: -4.5,20.5
       parent: 1
     - type: Docking
-      name: D6
+      name: dock-label-trade-six
   - uid: 1526
     components:
     - type: Transform
       pos: 50.5,-17.5
       parent: 1
     - type: Docking
-      name: CB3
+      name: dock-label-trade-cargo-bay-three
   - uid: 1730
     components:
     - type: Transform
@@ -6332,7 +6332,7 @@ entities:
       pos: 50.5,18.5
       parent: 1
     - type: Docking
-      name: CB1
+      name: dock-label-trade-cargo-bay-one
   - uid: 1750
     components:
     - type: Transform
@@ -6340,14 +6340,14 @@ entities:
       pos: 68.5,0.5
       parent: 1
     - type: Docking
-      name: CB2
+      name: dock-label-trade-cargo-bay-two
   - uid: 1754
     components:
     - type: Transform
       pos: -0.5,-44.5
       parent: 1
     - type: Docking
-      name: D4B
+      name: dock-label-trade-four-b
   - uid: 1755
     components:
     - type: Transform
@@ -6355,7 +6355,7 @@ entities:
       pos: 4.5,-41.5
       parent: 1
     - type: Docking
-      name: D4A
+      name: dock-label-trade-four-a
   - uid: 1756
     components:
     - type: Transform
@@ -6363,21 +6363,21 @@ entities:
       pos: 4.5,-39.5
       parent: 1
     - type: Docking
-      name: D4A
+      name: dock-label-trade-four-a
   - uid: 1789
     components:
     - type: Transform
       pos: 1.5,-44.5
       parent: 1
     - type: Docking
-      name: D4B
+      name: dock-label-trade-four-b
   - uid: 1790
     components:
     - type: Transform
       pos: 0.5,-44.5
       parent: 1
     - type: Docking
-      name: D4B
+      name: dock-label-trade-four-b
   - uid: 1831
     components:
     - type: Transform
@@ -6385,7 +6385,7 @@ entities:
       pos: -3.5,-40.5
       parent: 1
     - type: Docking
-      name: D4C
+      name: dock-label-trade-four-c
   - uid: 1832
     components:
     - type: Transform
@@ -6393,7 +6393,7 @@ entities:
       pos: -3.5,-39.5
       parent: 1
     - type: Docking
-      name: D4C
+      name: dock-label-trade-four-c
   - uid: 2366
     components:
     - type: Transform
@@ -6401,7 +6401,7 @@ entities:
       pos: 4.5,-40.5
       parent: 1
     - type: Docking
-      name: D4A
+      name: dock-label-trade-four-a
   - uid: 2375
     components:
     - type: Transform
@@ -6409,7 +6409,7 @@ entities:
       pos: -36.5,0.5
       parent: 1
     - type: Docking
-      name: D5B
+      name: dock-label-trade-five-b
   - uid: 2376
     components:
     - type: Transform
@@ -6417,7 +6417,7 @@ entities:
       pos: -36.5,-0.5
       parent: 1
     - type: Docking
-      name: D5B
+      name: dock-label-trade-five-b
   - uid: 2377
     components:
     - type: Transform
@@ -6425,7 +6425,7 @@ entities:
       pos: -36.5,1.5
       parent: 1
     - type: Docking
-      name: D5B
+      name: dock-label-trade-five-b
   - uid: 2378
     components:
     - type: Transform
@@ -6433,7 +6433,7 @@ entities:
       pos: -32.5,4.5
       parent: 1
     - type: Docking
-      name: D5C
+      name: dock-label-trade-five-c
   - uid: 2379
     components:
     - type: Transform
@@ -6441,7 +6441,7 @@ entities:
       pos: -31.5,4.5
       parent: 1
     - type: Docking
-      name: D5C
+      name: dock-label-trade-five-c
   - uid: 2380
     components:
     - type: Transform
@@ -6449,21 +6449,21 @@ entities:
       pos: -33.5,4.5
       parent: 1
     - type: Docking
-      name: D5C
+      name: dock-label-trade-five-c
   - uid: 2408
     components:
     - type: Transform
       pos: -33.5,-3.5
       parent: 1
     - type: Docking
-      name: D5A
+      name: dock-label-trade-five-a
   - uid: 2409
     components:
     - type: Transform
       pos: -31.5,-3.5
       parent: 1
     - type: Docking
-      name: D5A
+      name: dock-label-trade-five-a
   - uid: 2493
     components:
     - type: Transform
@@ -6471,7 +6471,7 @@ entities:
       pos: -3.5,42.5
       parent: 1
     - type: Docking
-      name: D7A
+      name: dock-label-trade-seven-a
   - uid: 2494
     components:
     - type: Transform
@@ -6479,7 +6479,7 @@ entities:
       pos: -3.5,41.5
       parent: 1
     - type: Docking
-      name: D7A
+      name: dock-label-trade-seven-a
   - uid: 2495
     components:
     - type: Transform
@@ -6487,7 +6487,7 @@ entities:
       pos: -3.5,40.5
       parent: 1
     - type: Docking
-      name: D7A
+      name: dock-label-trade-seven-a
   - uid: 2496
     components:
     - type: Transform
@@ -6495,7 +6495,7 @@ entities:
       pos: 4.5,42.5
       parent: 1
     - type: Docking
-      name: D7C
+      name: dock-label-trade-seven-c
   - uid: 2501
     components:
     - type: Transform
@@ -6503,7 +6503,7 @@ entities:
       pos: 4.5,41.5
       parent: 1
     - type: Docking
-      name: D7C
+      name: dock-label-trade-seven-c
   - uid: 2503
     components:
     - type: Transform
@@ -6511,7 +6511,7 @@ entities:
       pos: 4.5,40.5
       parent: 1
     - type: Docking
-      name: D7C
+      name: dock-label-trade-seven-c
   - uid: 2504
     components:
     - type: Transform
@@ -6519,7 +6519,7 @@ entities:
       pos: -0.5,45.5
       parent: 1
     - type: Docking
-      name: D7B
+      name: dock-label-trade-seven-b
   - uid: 2506
     components:
     - type: Transform
@@ -6527,7 +6527,7 @@ entities:
       pos: 1.5,45.5
       parent: 1
     - type: Docking
-      name: D7B
+      name: dock-label-trade-seven-b
   - uid: 2543
     components:
     - type: Transform
@@ -6535,7 +6535,7 @@ entities:
       pos: 28.5,15.5
       parent: 1
     - type: Docking
-      name: Guard
+      name: dock-label-guard
   - uid: 2842
     components:
     - type: Transform
@@ -6543,7 +6543,7 @@ entities:
       pos: 68.5,1.5
       parent: 1
     - type: Docking
-      name: CB2
+      name: dock-label-trade-cargo-bay-two
   - uid: 2843
     components:
     - type: Transform
@@ -6551,21 +6551,21 @@ entities:
       pos: 68.5,-0.5
       parent: 1
     - type: Docking
-      name: CB2
+      name: dock-label-trade-cargo-bay-two
   - uid: 2844
     components:
     - type: Transform
       pos: 51.5,-17.5
       parent: 1
     - type: Docking
-      name: CB3
+      name: dock-label-trade-cargo-bay-three
   - uid: 2845
     components:
     - type: Transform
       pos: 49.5,-17.5
       parent: 1
     - type: Docking
-      name: CB3
+      name: dock-label-trade-cargo-bay-three
   - uid: 2846
     components:
     - type: Transform
@@ -6573,7 +6573,7 @@ entities:
       pos: 49.5,18.5
       parent: 1
     - type: Docking
-      name: CB1
+      name: dock-label-trade-cargo-bay-one
   - uid: 2847
     components:
     - type: Transform
@@ -6581,7 +6581,7 @@ entities:
       pos: 51.5,18.5
       parent: 1
     - type: Docking
-      name: CB1
+      name: dock-label-trade-cargo-bay-one
   - uid: 2852
     components:
     - type: Transform
@@ -6589,7 +6589,7 @@ entities:
       pos: 0.5,45.5
       parent: 1
     - type: Docking
-      name: D7B
+      name: dock-label-trade-seven-b
 - proto: AirlockGlassShuttleNfsdLocked
   entities:
   - uid: 2544
@@ -6598,21 +6598,21 @@ entities:
       pos: 29.5,-14.5
       parent: 1
     - type: Docking
-      name: NFSD
+      name: dock-label-nfsd
   - uid: 2545
     components:
     - type: Transform
       pos: 28.5,-14.5
       parent: 1
     - type: Docking
-      name: NFSD
+      name: dock-label-nfsd
   - uid: 2546
     components:
     - type: Transform
       pos: 27.5,-14.5
       parent: 1
     - type: Docking
-      name: NFSD
+      name: dock-label-nfsd
 - proto: AirlockHatchMaintenance
   entities:
   - uid: 2855
