Ongoing conflict removals. Love it.

--- a/Resources/Prototypes/_NF/Roles/Jobs/Medical/mom.yml
+++ b/Resources/Prototypes/_NF/Roles/Jobs/Medical/mom.yml
@@ -31,9 +31,7 @@
 - type: startingGear
   id: MomGear
   equipment:
-    pocket1: 
+    pocket1: WeaponDisabler
   storage:
-    back:    
+    back:
     - RubberStampMom 
-    
-    
