--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,8 +5,9 @@ concurrency:
 
 on:
   workflow_dispatch:
-  # schedule:
-   # - cron: '0 10 * * *'
+  # Frontier: re-enabled autopublish
+   schedule:
+    - cron: '0 10 * * *'
 
 jobs:
   build:
