--- a/Resources/Maps/_NF/Shuttles/Expedition/charon.yml
+++ b/Resources/Maps/_NF/Shuttles/Expedition/charon.yml
@@ -3995,14 +3995,6 @@ entities:
     - type: Transform
       pos: -0.1718061,5.5434813
       parent: 1
-- proto: FuelDispenser
-  entities:
-  - uid: 454
-    components:
-    - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 4.5,-11.5
-      parent: 1
 - proto: GasFilterOxygenOnFlipped
   entities:
   - uid: 469
@@ -7934,12 +7926,19 @@ entities:
     - type: Transform
       pos: -2.5,6.5
       parent: 1
-- proto: WarpPointShip
+- proto: WarpPoint
   entities:
   - uid: 1071
     components:
     - type: Transform
       pos: -10.5,9.5
+      parent: 1
+- proto: WeldingFuelTankFull
+  entities:
+  - uid: 454
+    components:
+    - type: Transform
+      pos: 3.5,-11.5
       parent: 1
 - proto: Window
   entities:
